Transform new price panel to inline edit Fix hidden button layout shift Fix inline edit position for buttons Add inline edit auto moving to anchor on window resize

--- a/src/style.css
+++ b/src/style.css
@@ -203,7 +203,7 @@ th .iconify {
   overflow: hidden;
 }
 
-.hide:not(.overlay, .modal-body, .position-absolute, .w-100) {
+.hide:not(.overlay, .modal-body, .position-absolute, .w-100, button) {
   max-height: 0 !important;
   min-height: 0 !important;
   height: 0 !important;
